--- a/k8s/apps/http-dump/canary.yaml
+++ b/k8s/apps/http-dump/canary.yaml
@@ -33,3 +33,17 @@ spec:
       thresholdRange:
         max: 500 # maximum req duration P99 (milliseconds)
       interval: 30s
+    webhooks:
+    - name: smoke-test
+      type: pre-rollout
+      url: http://flagger-loadtester.flagger/
+      timeout: 15s
+      metadata:
+        type: bash
+        cmd: "curl -s http://http-dump-canary.default:8080/"
+    - name: load-test
+      url: http://flagger-loadtester.flagger/
+      timeout: 5s
+      metadata:
+        type: cmd
+        cmd: "hey -z 1m -q 10 -c 2 -h2 https://httptest.walnuts.dev/"
