--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -22,7 +22,8 @@ spec:
         - name: http
           containerPort: 8080
         resources:
-          limits: {}
+          limits:
+            memory: 500Mi
           requests:
             memory: 10Mi
         env:
