--- a/k8s/apps/flagger-metric-template/kustomization.yaml
+++ b/k8s/apps/flagger-metric-template/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flagger
 resources:
-- request-success-rate.yaml
-- request-duration.yaml
+- request-success-rate-nginx.yaml
+- request-duration-nginx.yaml
