--- a/k8s/apps/flagger-metric-template/request-duration-nginx.yaml
+++ b/k8s/apps/flagger-metric-template/request-duration-nginx.yaml
@@ -6,4 +6,24 @@ spec:
   provider:
     type: prometheus
     address: http://prometheus.linkerd-viz:9090
-  query: "sum(\n  rate(\n    nginx_ingress_controller_response_duration_seconds_sum{\n      exported_namespace=\"{{ namespace }}\",\n      ingress=\"{{ ingress }}\",\n      canary!=\"\"\n    }[{{ interval }}]\n  )\n) \n/ \nsum(\n  rate(\n    nginx_ingress_controller_response_duration_seconds_count{\n      exported_namespace=\"{{ namespace }}\",\n      ingress=\"{{ ingress }}\",\n      canary!=\"\"\n    }[{{ interval }}]\n  )\n) \n* 1000\n"
+  query: |
+    sum(
+      rate(
+        nginx_ingress_controller_response_duration_seconds_sum{
+          exported_namespace="{{ namespace }}",
+          ingress="{{ ingress }}",
+          canary!=""
+        }[{{ interval }}]
+      )
+    ) 
+    / 
+    sum(
+      rate(
+        nginx_ingress_controller_response_duration_seconds_count{
+          exported_namespace="{{ namespace }}",
+          ingress="{{ ingress }}",
+          canary!=""
+        }[{{ interval }}]
+      )
+    ) 
+    * 1000
