--- a/k8s/apps/flagger-metric-template/request-success-rate-nginx.yaml
+++ b/k8s/apps/flagger-metric-template/request-success-rate-nginx.yaml
@@ -6,4 +6,25 @@ spec:
   provider:
     type: prometheus
     address: http://prometheus.linkerd-viz:9090
-  query: "sum(\n  rate(\n    nginx_ingress_controller_requests{\n      exported_namespace=\"{{ namespace }}\",\n      ingress=\"{{ ingress }}\",\n      canary!=\"\",\n      status!~\"5.*\"\n    }[{{ interval }}]\n  )\n) \n/ \nsum(\n  rate(\n    nginx_ingress_controller_requests{\n      exported_namespace=\"{{ namespace }}\",\n      ingress=\"{{ ingress }}\",\n      canary!=\"\"\n    }[{{ interval }}]\n  )\n) \n* 100\n"
+  query: |
+    sum(
+      rate(
+        nginx_ingress_controller_requests{
+          exported_namespace="{{ namespace }}",
+          ingress="{{ ingress }}",
+          canary!="",
+          status!~"5.*"
+        }[{{ interval }}]
+      )
+    ) 
+    / 
+    sum(
+      rate(
+        nginx_ingress_controller_requests{
+          exported_namespace="{{ namespace }}",
+          ingress="{{ ingress }}",
+          canary!=""
+        }[{{ interval }}]
+      )
+    ) 
+    * 100
