--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -34,4 +34,4 @@ spec:
         - name: OTEL_EXPORTER_OTLP_ENDPOINT
           value: "http://default-collector.opentelemetry-collector.svc.cluster.local:4317"
         - name: hoge
-          value: gufa
+          value: fuga
