--- a/k8s/apps/flagger-metric-template/request-success-rate-nginx.yaml
+++ b/k8s/apps/flagger-metric-template/request-success-rate-nginx.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   provider:
     type: prometheus
+    address: "http://prometheus-stack-kube-prom-prometheus.monitoring.svc.cluster.local:9090"
   query: |
     sum(
       rate(
