--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -17,6 +17,8 @@ spec:
       - name: http-dump
         securityContext:
           readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         image: ghcr.io/walnuts1018/http-dump:05e1e4aa22db76e82d7c7313717ca1aba0ef926c-23 # {"$imagepolicy": "default:http-dump"}
         ports:
         - name: http
