--- a/k8s/apps/http-dump/canary.yaml
+++ b/k8s/apps/http-dump/canary.yaml
@@ -22,9 +22,8 @@ spec:
     targetPort: 8080
   analysis:
     interval: 30s
-    threshold: 10
-    maxWeight: 50
-    stepWeight: 10
+    threshold: 2
+    iterations: 10
     metrics:
     - name: request-success-rate-nginx
       templateRef:
