--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -19,6 +19,8 @@ spec:
           readOnlyRootFilesystem: true
           seccompProfile:
             type: RuntimeDefault
+          runAsNonRoot: true
+          allowPrivilegeEscalation: false
         image: ghcr.io/walnuts1018/http-dump:629824cedeccfb239b7d490f2f6dffb70f12a5f7-24 # {"$imagepolicy": "default:http-dump"}
         ports:
         - name: http
