--- a/k8s/apps/http-dump/canary.yaml
+++ b/k8s/apps/http-dump/canary.yaml
@@ -22,8 +22,9 @@ spec:
     targetPort: 8080
   analysis:
     interval: 30s
-    threshold: 2
-    iterations: 10
+    threshold: 10
+    maxWeight: 30
+    stepWeight: 10
     metrics:
     - name: request-success-rate-nginx
       templateRef:
