--- a/k8s/apps/http-dump/deployment.yaml
+++ b/k8s/apps/http-dump/deployment.yaml
@@ -37,3 +37,5 @@ spec:
           value: "true"
         - name: OTEL_EXPORTER_OTLP_ENDPOINT
           value: "http://default-collector.opentelemetry-collector.svc.cluster.local:4317"
+        - name: a
+          value: b
