--- a/k8s/apps/flagger-loadtester/podmonitor.yaml
+++ b/k8s/apps/flagger-loadtester/podmonitor.yaml
@@ -12,6 +12,9 @@ spec:
     path: /metrics
     targetPort: 8080
   jobLabel: flagger-loadtester
+  namespaceSelector:
+    matchNames:
+    - flagger
   selector:
     matchLabels:
       app: loadtester
