--- a/k8s/apps/ingress-nginx/helm.yaml
+++ b/k8s/apps/ingress-nginx/helm.yaml
@@ -16,6 +16,8 @@ spec:
       version: 4.11.2
   values:
     controller:
+      image:
+        digest: "" # https://github.com/containers/image/blob/d372f0e440d35c6041de39023b0b6eb131fba54b/docker/docker_transport.go#L79-L81
       config:
         use-forwarded-headers: true
         enable-opentelemetry: "true"
@@ -43,6 +45,8 @@ spec:
       opentelemetry:
         enabled: true
         name: opentelemetry
+        image:
+          digest: "" # https://github.com/containers/image/blob/d372f0e440d35c6041de39023b0b6eb131fba54b/docker/docker_transport.go#L79-L81
       metrics:
         enabled: true
         serviceMonitor:
