--- a/k8s/apps/nginx-test/virtualhost.conf
+++ b/k8s/apps/nginx-test/virtualhost.conf
@@ -1,8 +1,12 @@
 server {
     listen 8080 default_server;
     server_name "";
-    proxy_redirect off;
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+
     location / {
-        rewrite ^(.*)$ https://walnuts.hatenablog.com/ redirect;
+        proxy_pass http-dump.svc.cluster.local:8080;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
