--- a/k8s/apps/nginx-test/virtualhost.conf
+++ b/k8s/apps/nginx-test/virtualhost.conf
@@ -5,7 +5,7 @@ server {
     real_ip_recursive on;
 
     location / {
-        proxy_pass http-dump.svc.cluster.local:8080;
+        proxy_pass http://http-dump.svc.cluster.local:8080;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
