--- a/k8s/apps/nginx-test/virtualhost.conf
+++ b/k8s/apps/nginx-test/virtualhost.conf
@@ -5,7 +5,16 @@ server {
     real_ip_recursive on;
 
     location / {
-        proxy_pass http://http-dump.default.svc.cluster.local:8080;
+        if ($msec ~* [0-3]$) {
+            set $proxypass "http://http-dump.default.svc.cluster.local:8080";
+        }
+        if ($msec ~* [4-6]$) {
+            set $proxypass "http://http-dump.default.svc.cluster.local:8080";
+        }
+        if ($msec ~* [7-9]$) {
+            set $proxypass "http://http-dump.default.svc.cluster.local:8080";
+        }
+        proxy_pass $proxypass;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
