--- a/k8s/apps/nginx-test/virtualhost.conf
+++ b/k8s/apps/nginx-test/virtualhost.conf
@@ -6,7 +6,7 @@ server {
 
     location / {
         if ($msec ~* [0-3]$) {
-            set $proxypass "http://http-dump.default.svc.cluster.local:8080";
+            set $proxypass "http://walnuts-dev.default.svc.cluster.local:8080";
         }
         if ($msec ~* [4-6]$) {
             set $proxypass "http://http-dump.default.svc.cluster.local:8080";
