--- a/k8s/apps/nginx-test/virtualhost.conf
+++ b/k8s/apps/nginx-test/virtualhost.conf
@@ -6,15 +6,14 @@ server {
 
     location / {
         if ($msec ~* [0-3]$) {
-            set $proxypass "http://walnuts-dev.default.svc.cluster.local:8080";
+            proxy_pass "http://walnuts-dev.default.svc.cluster.local:8080";
         }
         if ($msec ~* [4-6]$) {
-            set $proxypass "http://http-dump.default.svc.cluster.local:8080";
+            proxy_pass "http://http-dump.default.svc.cluster.local:8080";
         }
         if ($msec ~* [7-9]$) {
-            set $proxypass "http://http-dump.default.svc.cluster.local:8080";
+            proxy_pass "http://http-dump.default.svc.cluster.local:8080";
         }
-        proxy_pass $proxypass;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
