--- a/k8s/apps/nginx-test/virtualhost.conf
+++ b/k8s/apps/nginx-test/virtualhost.conf
@@ -6,12 +6,15 @@ server {
 
     location / {
         if ($msec ~* [0-3]$) {
-            proxy_pass "http://walnuts-dev.default.svc.cluster.local:8080";
+            proxy_set_header Test-Header "1";
+            proxy_pass "http://http-dump.default.svc.cluster.local:8080";
         }
         if ($msec ~* [4-6]$) {
+            proxy_set_header Test-Header "2";
             proxy_pass "http://http-dump.default.svc.cluster.local:8080";
         }
         if ($msec ~* [7-9]$) {
+            proxy_set_header Test-Header "3";
             proxy_pass "http://http-dump.default.svc.cluster.local:8080";
         }
         proxy_set_header X-Real-IP $remote_addr;
