--- a/k8s/apps/nginx-test/virtualhost.conf
+++ b/k8s/apps/nginx-test/virtualhost.conf
@@ -6,17 +6,18 @@ server {
 
     location / {
         if ($msec ~* [0-3]$) {
-            proxy_set_header Test-Header "1";
+            set $test_id "1";
             proxy_pass "http://http-dump.default.svc.cluster.local:8080";
         }
         if ($msec ~* [4-6]$) {
-            proxy_set_header Test-Header "2";
+            set $test_id "2";
             proxy_pass "http://http-dump.default.svc.cluster.local:8080";
         }
         if ($msec ~* [7-9]$) {
-            proxy_set_header Test-Header "3";
+            set $test_id "3";
             proxy_pass "http://http-dump.default.svc.cluster.local:8080";
         }
+        proxy_set_header TEST-ID $test_id;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
