--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -100,8 +100,10 @@ spec:
             action: replace
     prometheus:
       prometheusSpec:
-        serviceMonitorSelectorNilUsesHelmValues: false # serviceMonitorSelectorが{}である時、全てのServiceMonitorを監視対象にする
-        podMonitorSelectorNilUsesHelmValues: false # podMonitorSelectorが{}である時、全てのPodMonitorを監視対象にする
+        serviceMonitorSelector:
+          matchLabels: nil #全てのServiceMonitorを監視対象にする
+        podMonitorSelector:
+          matchLabels: nil #全てのPodMonitorを監視対象にする
         storageSpec:
           volumeClaimTemplate:
             spec:
