--- a/k8s/apps/opentelemetry-collectors/image-policy.yaml
+++ b/k8s/apps/opentelemetry-collectors/image-policy.yaml
@@ -15,7 +15,7 @@ spec:
     name: opentelemetry-collector-contrib
   policy:
     semver:
-      range: ">=0.108.0"
+      range: "<=0.108.0"
 
 ---
 apiVersion: image.toolkit.fluxcd.io/v1beta2
