rm verify: not supported
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/k8s/apps/flagger/helm.yaml
+++ b/k8s/apps/flagger/helm.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       chart: flagger
       version: 1.38.0
-      verify:
-        provider: cosign
+      # verify:
+  #   provider: cosign
   values:
     metricsServer: "http://prometheus-stack-kube-prom-prometheus.monitoring.svc.cluster.local:9090"
     meshProvider: nginx
