not nil, use null
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -101,9 +101,9 @@ spec:
     prometheus:
       prometheusSpec:
         serviceMonitorSelector:
-          matchLabels: nil #全てのServiceMonitorを監視対象にする
+          matchLabels: null #全てのServiceMonitorを監視対象にする
         podMonitorSelector:
-          matchLabels: nil #全てのPodMonitorを監視対象にする
+          matchLabels: null #全てのPodMonitorを監視対象にする
         storageSpec:
           volumeClaimTemplate:
             spec:
