--- a/k8s/apps/minio/helm.yaml
+++ b/k8s/apps/minio/helm.yaml
@@ -19,7 +19,7 @@ spec:
       images:
       - name: curlimages/curl
         newName: curlimages/curl
-        newTag: curlimages/curl:8.10.1 # {"$imagepolicy": "minio:minio-curl"}
+        newTag: 8.10.0 # {"$imagepolicy": "minio:minio-curl:tag"}
       patches:
       - target:
           version: v1
