--- a/k8s/apps/postgresql-default/postgresql.yaml
+++ b/k8s/apps/postgresql-default/postgresql.yaml
@@ -74,3 +74,6 @@ spec:
           operator: NotIn
           values:
           - donut
+  enableLogicalBackup: true
+  # logicalBackupRetention: "2 week"
+  logicalBackupSchedule: "0 18 * * *"
