--- a/k8s/apps/elasticsearch/deployment.yaml
+++ b/k8s/apps/elasticsearch/deployment.yaml
@@ -26,9 +26,11 @@ spec:
         - containerPort: 9200
         resources:
           requests:
+            cpu: "0"
             memory: 3000Mi
           limits:
-            memory: "5000Mi"
+            cpu: "1"
+            memory: "6000Mi"
         env:
         - name: discovery.type
           value: single-node
