--- a/k8s/apps/machine-status-api/deployment.yaml
+++ b/k8s/apps/machine-status-api/deployment.yaml
@@ -43,6 +43,4 @@ spec:
       nodeSelector:
         kubernetes.io/hostname: cheese
       tolerations:
-      - key: "node-role.kubernetes.io/control-plane"
-        operator: "Exists"
-        effect: "NoSchedule"
+      - operator: "Exists"
