--- a/k8s/apps/cilium/helm.yaml
+++ b/k8s/apps/cilium/helm.yaml
@@ -35,12 +35,20 @@ spec:
           auto:
             enabled: true
             method: certmanager
+            certManagerIssuerRef:
+              group: cert-manager.io
+              kind: ClusterIssuer
+              name: letsencrypt-prod
     hubble:
       tls:
         enabled: true
         auto:
           enabled: true
           method: certmanager
+          certManagerIssuerRef:
+            group: cert-manager.io
+            kind: ClusterIssuer
+            name: letsencrypt-prod
       relay:
         enabled: true
         image:
