--- a/k8s/apps/clusterissuer/kustomization.yaml
+++ b/k8s/apps/clusterissuer/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- prod.yaml
-- stg.yaml
 - externalsecret.yaml
+- letsencrypt-prod.yaml
+- letsencrypt-stg.yaml
+- selfsigned.yaml
