change samba port
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/k8s/apps/samba/deployment.yaml
+++ b/k8s/apps/samba/deployment.yaml
@@ -39,6 +39,8 @@ spec:
           value: samba
         - name: SAMBA_VOLUME_CONFIG_share
           value: "[share]; path=/samba-share; valid users = samba; public = no; read only = no; browseable = yes; available = yes"
+        - name: SAMBA_GLOBAL_CONFIG_smb
+          value: "ports = 10445 10139"
         ports:
         - containerPort: 10445
           name: samba
