--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -147,8 +147,12 @@ spec:
         requests:
           cpu: 50m
           memory: 300Mi
+        limits:
+          memory: 9830Mi
     resultsCache:
       resources:
         requests:
           cpu: 50m
           memory: 50Mi
+        limits:
+          memory: 1229Mi
