--- a/k8s/apps/tempo/helm.yaml
+++ b/k8s/apps/tempo/helm.yaml
@@ -18,7 +18,7 @@ spec:
     tempo:
       resources:
         requests:
-          memory: 2Gi
+          memory: 300Mi
         limits:
           memory: 4Gi
       storage:
