--- a/k8s/apps/cilium/helm.yaml
+++ b/k8s/apps/cilium/helm.yaml
@@ -73,3 +73,4 @@ spec:
     operator:
       image:
         useDigest: false # https://github.com/containers/image/blob/d372f0e440d35c6041de39023b0b6eb131fba54b/docker/docker_transport.go#L79-L81
+      tolerations: []
