--- a/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
@@ -20,6 +20,9 @@ spec:
           disk:
           filesystem:
           network:
+        metrics:
+          system.linux.memory.available:
+            enabled: true
       kubeletstats:
         collection_interval: 10s
         auth_type: 'serviceAccount'
