--- a/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
@@ -15,7 +15,7 @@ spec:
           load:
           memory:
             metrics:
-              system.memory.utilization:
+              system.memory.limit:
                 enabled: true
               system.linux.memory.available:
                 enabled: true
