--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -66,15 +66,15 @@ spec:
         traces:
           receivers: [otlp]
           processors: [memory_limiter, batch, k8sattributes]
-          exporters: [otlp/tempo]
+          exporters: [otlp/tempo, otlp/signoz]
         metrics:
           receivers: [otlp]
           processors: [memory_limiter, batch, k8sattributes]
-          exporters: [otlp/prometheus-exporter]
+          exporters: [otlp/prometheus-exporter, otlp/signoz]
         logs:
           receivers: [otlp]
           processors: [memory_limiter, batch, k8sattributes]
-          exporters: [otlp/loki-exporter]
+          exporters: [otlp/loki-exporter, otlp/signoz]
   autoscaler:
     minReplicas: 1
     maxReplicas: 5
