--- a/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
@@ -32,13 +32,7 @@ spec:
         - node
         - pod
         - container
-        metrics:
-          container.cpu.utilization:
-            enabled: false
-          k8s.node.cpu.utilization:
-            enabled: false
-          k8s.pod.cpu.utilization:
-            enabled: false
+        enableCPUUsageMetrics: true
     processors:
       memory_limiter:
         check_interval: 1s
