--- a/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/k8s-daemonset/otel-collector.yaml
@@ -13,6 +13,9 @@ spec:
         collection_interval: 10s
         scrapers:
           cpu:
+            metrics:
+              system.cpu.logical.count:
+                enabled: true
           load:
           memory:
             metrics:
