use prometheus otlp
Signed-off-by: walnuts1018 <walnuts1018@hatena.com>

--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -121,3 +121,5 @@ spec:
         retentionSize: 30GiB
         replicas: 1
         enableRemoteWriteReceiver: true
+        enableFeatures:
+        - otlp-write-receiver
