Revert "rm prometheus exporter"
This reverts commit 8ce9c16a0a51aa5c67107cb520c7ca965fce5400.

--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -52,6 +52,10 @@ spec:
         endpoint: loki-exporter-collector.opentelemetry-collector.svc.cluster.local:4317
         tls:
           insecure: true
+      otlp/prometheus-exporter:
+        endpoint: prometheus-exporter-collector.opentelemetry-collector.svc.cluster.local:4317
+        tls:
+          insecure: true
       otlphttp/vaxila:
         endpoint: "https://otlp-vaxila.mackerelio.com"
         headers:
