--- a/k8s/apps/postgresql-default/users/users.yaml
+++ b/k8s/apps/postgresql-default/users/users.yaml
@@ -62,3 +62,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: y-2024
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: mucaron
