--- a/k8s/apps/mucaron/kustomization.yaml
+++ b/k8s/apps/mucaron/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: ac-hacking-2024
+namespace: mucaron
 resources:
 - back
 - front
